[metadata]
name = dplypy
version = 0.0.1
author = Corbin Charpentier, Matthew Chau, Jessie Ren
author_email = me@corbincharpentier.com
description = Dplyr in Python (with limited functionality) 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ccharp/dplyPY
project_urls =
    Bug Tracker = https://github.com/ccharp/dplyPYissues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
